--- a/charts/koel/templates/koel-database-secret.yaml
+++ b/charts/koel/templates/koel-database-secret.yaml
@@ -2,17 +2,24 @@
 apiVersion: v1
 kind: Secret
 metadata:
-  name: "{{ template "koel.fullname" . }}-{{ .Values.database.component }}-secret"
+  name: {{ template "koel.fullname" . }}-{{ .Values.database.component }}-secret
   namespace: {{ template "koel.namespace" . }}
   labels:
-    {{- include "koel.standardLabels" . | nindent 4 }}
+    {{- include "koel.labels" . | nindent 4 }}
     component: {{ .Values.database.component }}
 type: Opaque
 stringData:
-  {{- if ( and .Values.database.db_user .Values.database.db_root_password .Values.database.db_name ) }}
-  MYSQL_ROOT_PASSWORD: {{ .Values.database.db_root_password | default "database-root-password" }}
-  MYSQL_DATABASE: {{ .Values.database.db_name | default "database-name" }}
-  MYSQL_PASSWORD: {{ .Values.database.db_user.password | default "database-password" }}
-  MYSQL_USER: {{ .Values.database.db_user.user | default "database-user" }}
+  {{- if ( and .Values.dbUsername .Values.dbRootPassword .Values.dbDatabase ) }}
+  {{- if eq .Values.dbConnection "pgsql" }}
+  POSTGRES_PASSWORD: {{ .Values.dbRootPassword | default "database-root-password" }}
+  POSTGRES_DB: {{ .Values.dbDatabase | default "database-name" }}
+  POSTGRES_USER: {{ .Values.dbUsername | default "database-user" }}
+  {{- end }}
+  {{- if eq .Values.dbConnection "mysql" }}
+  MYSQL_ROOT_PASSWORD: {{ .Values.dbRootPassword | default "database-root-password" }}
+  MYSQL_DATABASE: {{ .Values.dbDatabase | default "database-name" }}
+  MYSQL_PASSWORD: {{ .Values.dbPassword | default "database-password" }}
+  MYSQL_USER: {{ .Values.dbUsername | default "database-user" }}
+  {{- end }}
   {{- end }}
 {{- end }}
