--- a/charts/koel/templates/koel-database-service.yaml
+++ b/charts/koel/templates/koel-database-service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: "{{ template "koel.fullname" . }}-{{ .Values.database.component }}"
+  name: {{ template "koel.fullname" . }}-{{ .Values.database.component }}
   namespace: {{ template "koel.namespace" . }}
   labels:
     {{- include "koel.labels" . | nindent 4 }}
@@ -21,7 +21,5 @@ spec:
       port: {{ .Values.database.port }}
       protocol: TCP
   selector:
-    app: {{ template "koel.name" . }}
-    release: {{ .Release.Name }}
-    component: {{ .Values.database.component }}
+    {{- include "koel.selectorLabels" . | nindent 4 }}
 {{- end }}
