--- a/charts/koel/templates/koel-volumes.yaml
+++ b/charts/koel/templates/koel-volumes.yaml
@@ -4,10 +4,10 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: "{{ template "koel.fullname" . }}-{{ .Values.koel.component }}-music"
+  name: {{ template "koel.fullname" . }}-{{ .Values.koel.component }}-music
+  namespace: {{ template "koel.namespace" . }}
   labels:
     {{- include "koel.labels" . | nindent 4 }}
-    component: "{{ .Values.koel.component }}-music"
 spec:
   accessModes:
   - {{ .Values.koel.persistence.music.accessMode | quote }}
@@ -23,10 +23,9 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: "{{ template "koel.fullname" . }}-{{ .Values.koel.component }}-covers"
+  name: {{ template "koel.fullname" . }}-{{ .Values.koel.component }}-covers
   labels:
     {{- include "koel.labels" . | nindent 4 }}
-    component: "{{ .Values.koel.component }}-covers"
 spec:
   accessModes:
   - {{ .Values.koel.persistence.covers.accessMode | quote }}
@@ -42,10 +41,9 @@ spec:
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: "{{ template "koel.fullname" . }}-{{ .Values.koel.component }}-data"
+  name: {{ template "koel.fullname" . }}-{{ .Values.koel.component }}-data
   labels:
     {{- include "koel.labels" . | nindent 4 }}
-    component: "{{ .Values.koel.component }}-data"
 spec:
   accessModes:
   - {{ .Values.koel.persistence.data.accessMode | quote }}
